--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta content="Richard Kim is a Product Manager from Los Angeles living and working in Brooklyn, New York." name="description"/>
   <meta content="Richard Kim – Product Manager" property="og:title"/>
   <meta content="Richard Kim is a Product Manager from Los Angeles living and working in Brooklyn, New York." property="og:description"/>
-  <meta content="assets/meta.png" property="og:image"/>
+  <meta content="https://raw.githubusercontent.com/bestendeavors/bestendeavors.github.io/master/assets/meta.png" property="og:image"/>
   <meta content="Richard Kim – Product Manager" property="twitter:title"/>
   <meta content="Richard Kim is a Product Manager from Los Angeles living and working in Brooklyn, New York." property="twitter:description"/>
   <meta content="assets/meta.png" property="twitter:image"/>
