--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <meta property="og:type" content="website"/>
   <meta content="summary_large_image" name="twitter:card"/>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
-  <link href="https://uploads-ssl.webflow.com/5a24876819e5440001d451df/5a2c42fcb311980001620a00_32x32.png" rel="shortcut icon" type="image/x-icon">
-  <link href="https://uploads-ssl.webflow.com/5a24876819e5440001d451df/5a2c43004584a6000127f9f7_256x256.png" rel="apple-touch-icon">
+  <link href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/237/black-large-square_2b1b.png" rel="shortcut icon" type="image/x-icon">
+  <link href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/237/black-large-square_2b1b.png" rel="apple-touch-icon">
   <!--CSS-->
   <link href="/css/rmsk.css" rel="stylesheet" >
   <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
