--- a/index.html
+++ b/index.html
@@ -40,13 +40,12 @@
   <div class="div-block-2019 sml">
       <div class="columns w-row">
           <div class="column-5 w-col w-col-6">
-              <p class="paragraph-sml">I have shipped digital products for clients such as → Hospital for Special Surgery, Murad, Beautycounter, The Frye Company, and Buck Mason. If you'd like to grab a coffee, walk through product strategy, or just want to chat - feel free to say hello.</p>
+              <p class="paragraph-sml">I have shipped digital products for clients such as → Farfetch, Hospital for Special Surgery, Murad, Beautycounter, The Frye Company, and Buck Mason. If you'd like to grab a coffee, walk through product strategy, or just want to chat - feel free to say hello.</p>
           </div>
           <div class="column-6 w-col w-col-6">
               <p class="paragraph-sml">
                   <a href="mailto:richardmskim@gmail.com" class="links-2019">Email ↗</a>
                   <a href="https://www.linkedin.com/in/richard-kim-product-manager/" target="_blank" class="links-2019">Linkedin ↗</a>
-                  <a href="https://soundcloud.com/richrdkim" target="_blank" class="links-2019">Soundcloud ↗</a>
               </p>
           </div>
       </div>
