--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
           <span class="hover-title">old motorcycles</span><span class="hover-image"><img src="assets/old-motorcycle.JPG"></span>, or building  
           <span class="hover-title">HiFi speakers.</span><span class="hover-image"><img src="assets/RNI-Films-IMG-9827D83F-3AD3-4504-81E4-BA2D8CC9C7A8 2.jpg"></span>
       </p>
+        <p class="paragraph-sml">
+         I have shipped products for clients such as → Farfetch, Hospital for Special Surgery, Unilever, Beautycounter, The Frye Company, and Buck Mason.
+        </p>
   </div>
   <div class="div-block-2019 sml">
       <div class="columns w-row">
-          <div class="column-5 w-col w-col-6">
-              <p class="paragraph-sml">I have shipped products for clients such as → Farfetch, Hospital for Special Surgery, Unilever, Beautycounter, The Frye Company, and Buck Mason. If you'd like to grab a coffee, walk through strategy, or just want to chat - feel free to say hello.</p>
-          </div>
+
           <div class="column-5 w-col w-col-6">
               <p class="paragraph-sml">If you'd like to grab a coffee, walk through strategy, or just want to chat - feel free to say hello.</p>
           </div>
