--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       </p>
       <p class="paragraph-sml">
           When I'm not prioritizing roadmaps you can find me hosting
-          <span class="hover-title">dinner pop-ups</span><span class="hover-image"><img src="assets/ig-1.JPG"></span>, tinkering with 
+          <span class="hover-title">dinner pop-ups</span><span class="hover-image"><img src="assets/18740020.jpg"></span>, tinkering with 
           <span class="hover-title">old motorcycles</span><span class="hover-image"><img src="assets/old-motorcycle.JPG"></span>, or building  
-          <span class="hover-title">HiFi speakers.</span><span class="hover-image"><img src="assets/RNI-Films-IMG-9827D83F-3AD3-4504-81E4-BA2D8CC9C7A8 2.jpg"></span>
+          <span class="hover-title">HiFi speakers.</span><span class="hover-image"><img src="assets/IMG_1501.JPG"></span>
       </p>
   </div>
   <div class="div-block-2019 sml">
